fix alignment issue

--- a/src/_includes/css/base.css
+++ b/src/_includes/css/base.css
@@ -102,7 +102,8 @@ p {
 .horizontal-container {
     display: flex;
     padding: 0px;
-    width: 100%
+    width: 100%;
+    justify-content: center;
 }
 .horizontal-container>.left {
     align-self: center;
